/*
 * Copyright (c) 2023. Liero AB
 *
 * Permission is hereby granted, free of charge, to any person obtaining
 * a copy of this software and associated documentation files (the "Software"),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense,
 * and/or sell copies of the Software, and to permit persons to whom the Software
 * is furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
 * IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
 * CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
 * TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE
 * OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */

syntax = "proto3";
package device;

import "google/protobuf/timestamp.proto";
import "traffic_policy.proto";

option go_package = "go.opentelco.io/go-swpx/proto/go/devicepb";

message Device {
    // hostname used ot reach the device
    string hostname = 1;

    // configured name on the device
    string sysname = 2;

    // version of the device
    string version = 3;

    // the snmpp object id of the device
    string snmp_object_id = 4;

    // the IF-MIB port index of the device
    int32 port_index = 5;

    // the uptime of the device
    string uptime = 6;

    // the last time the device was changed
    string last_changed = 7;

    // configured system contact
    string contact = 8;

    // configure system location
    string location = 9;

    //  main bridge mac address
    string bridge_mac_address = 10;

    // the type of the device
    Type type = 11;
    enum Type {
        TYPE_UNSET     = 0;
        TYPE_DEVICE    = 1;
        TYPE_CHASSIS   = 2;
        TYPE_VIRTUAL   = 3;
        TYPE_POWER     = 4;
        TYPE_FAN       = 5;
        TYPE_INTERFACE = 6;
    }

    message Slot {
        // what number the slot has (1-99)
        int64 number = 1;
        // the devices that are in the slot
        Device device = 2;
    }

    // slots of a device (e.g. for a chassis) that has multiple slots for devices
    repeated Slot slots = 12;

    message Module {
        // what number the module has (1-99)
        int64 number = 1;
        // the devices that are in the module
        Device device = 2;
    }

    // slots of a device (e.g. for a chassis) that has multiple slots for devices
    repeated Module modules = 13;

    repeated Port ports = 14;

    repeated Aggregation aggregated_ports = 15;

    TransientErrors transient_errors = 16;
}

message TransientErrors {
    repeated TransientError errors = 1;
}

message TransientError {
    int32 code     = 1;
    string message = 2;
    string cause   = 3;
    Level level    = 4;

    enum Level {
        INFO  = 0;
        WARN  = 1;
        FATAL = 2;
    }
}

message Port {
    string aggregated_id = 1;

    // snmp index (IF-MIB)
    int64 index = 2;
    // snmp physical index (IF-ENTITY-MIB)
    int64 index_physical = 3;

    // Vendor specific alias of port. GigabitEthernt ...
    string alias = 4;

    // configured description
    string description = 5;

    string mac_address = 6;

    // types from the SNMP IF-MIB
    enum Type {
        TYPE_UNSET                    = 0;
        other                         = 1;
        regular1822                   = 2;
        hdh1822                       = 3;
        ddnX25                        = 4;
        rfc877x25                     = 5;
        ethernetCsmacd                = 6;
        iso88023Csmacd                = 7;
        iso88024TokenBus              = 8;
        iso88025TokenRing             = 9;
        iso88026Man                   = 10;
        starLan                       = 11;
        proteon10Mbit                 = 12;
        proteon80Mbit                 = 13;
        hyperchannel                  = 14;
        fddi                          = 15;
        lapb                          = 16;
        sdlc                          = 17;
        ds1                           = 18;
        e1                            = 19;
        basicISDN                     = 20;
        primaryISDN                   = 21;
        propPointToPointSerial        = 22;
        ppp                           = 23;
        softwareLoopback              = 24;
        eon                           = 25;
        ethernet3Mbit                 = 26;
        nsip                          = 27;
        slip                          = 28;
        ultra                         = 29;
        ds3                           = 30;
        sip                           = 31;
        frameRelay                    = 32;
        rs232                         = 33;
        para                          = 34;
        arcnet                        = 35;
        arcnetPlus                    = 36;
        atm                           = 37;
        miox25                        = 38;
        sonet                         = 39;
        x25ple                        = 40;
        iso88022llc                   = 41;
        localTalk                     = 42;
        smdsDxi                       = 43;
        frameRelayService             = 44;
        v35                           = 45;
        hssi                          = 46;
        hippi                         = 47;
        modem                         = 48;
        aal5                          = 49;
        sonetPath                     = 50;
        sonetVT                       = 51;
        smdsIcip                      = 52;
        propVirtual                   = 53;
        propMultiplexor               = 54;
        ieee80212                     = 55;
        fibreChannel                  = 56;
        hippiInterface                = 57;
        frameRelayInterconnect        = 58;
        aflane8023                    = 59;
        aflane8025                    = 60;
        cctEmul                       = 61;
        fastEther                     = 62;
        isdn                          = 63;
        v11                           = 64;
        v36                           = 65;
        g703at64k                     = 66;
        g703at2mb                     = 67;
        qllc                          = 68;
        fastEtherFX                   = 69;
        channel                       = 70;
        ieee80211                     = 71;
        ibm370parChan                 = 72;
        escon                         = 73;
        dlsw                          = 74;
        isdns                         = 75;
        isdnu                         = 76;
        lapd                          = 77;
        ipSwitch                      = 78;
        rsrb                          = 79;
        atmLogical                    = 80;
        ds0                           = 81;
        ds0Bundle                     = 82;
        bsc                           = 83;
        async                         = 84;
        cnr                           = 85;
        iso88025Dtr                   = 86;
        eplrs                         = 87;
        arap                          = 88;
        propCnls                      = 89;
        hostPad                       = 90;
        termPad                       = 91;
        frameRelayMPI                 = 92;
        x213                          = 93;
        adsl                          = 94;
        radsl                         = 95;
        sdsl                          = 96;
        vdsl                          = 97;
        iso88025CRFPInt               = 98;
        myrinet                       = 99;
        voiceEM                       = 100;
        voiceFXO                      = 101;
        voiceFXS                      = 102;
        voiceEncap                    = 103;
        voiceOverIp                   = 104;
        atmDxi                        = 105;
        atmFuni                       = 106;
        atmIma                        = 107;
        pppMultilinkBundle            = 108;
        ipOverCdlc                    = 109;
        ipOverClaw                    = 110;
        stackToStack                  = 111;
        virtualIpAddress              = 112;
        mpc                           = 113;
        ipOverAtm                     = 114;
        iso88025Fiber                 = 115;
        tdlc                          = 116;
        gigabitEthernet               = 117;
        hdlc                          = 118;
        lapf                          = 119;
        v37                           = 120;
        x25mlp                        = 121;
        x25huntGroup                  = 122;
        transpHdlc                    = 123;
        interleave                    = 124;
        fast                          = 125;
        ip                            = 126;
        docsCableMaclayer             = 127;
        docsCableDownstream           = 128;
        docsCableUpstream             = 129;
        a12MppSwitch                  = 130;
        tunnel                        = 131;
        coffee                        = 132;
        ces                           = 133;
        atmSubInterface               = 134;
        l2vlan                        = 135;
        l3ipvlan                      = 136;
        l3ipxvlan                     = 137;
        digitalPowerline              = 138;
        mediaMailOverIp               = 139;
        dtm                           = 140;
        dcn                           = 141;
        ipForward                     = 142;
        msdsl                         = 143;
        ieee1394                      = 144;
        if_gsn                        = 145;
        dvbRccMacLayer                = 146;
        dvbRccDownstream              = 147;
        dvbRccUpstream                = 148;
        atmVirtual                    = 149;
        mplsTunnel                    = 150;
        srp                           = 151;
        voiceOverAtm                  = 152;
        voiceOverFrameRelay           = 153;
        idsl                          = 154;
        compositeLink                 = 155;
        ss7SigLink                    = 156;
        propWirelessP2P               = 157;
        frForward                     = 158;
        rfc1483                       = 159;
        usb                           = 160;
        ieee8023adLag                 = 161;
        bgppolicyaccounting           = 162;
        frf16MfrBundle                = 163;
        h323Gatekeeper                = 164;
        h323Proxy                     = 165;
        mpls                          = 166;
        mfSigLink                     = 167;
        hdsl2                         = 168;
        shdsl                         = 169;
        ds1FDL                        = 170;
        pos                           = 171;
        dvbAsiIn                      = 172;
        dvbAsiOut                     = 173;
        plc                           = 174;
        nfas                          = 175;
        tr008                         = 176;
        gr303RDT                      = 177;
        gr303IDT                      = 178;
        isup                          = 179;
        propDocsWirelessMaclayer      = 180;
        propDocsWirelessDownstream    = 181;
        propDocsWirelessUpstream      = 182;
        hiperlan2                     = 183;
        propBWAp2Mp                   = 184;
        sonetOverheadChannel          = 185;
        digitalWrapperOverheadChannel = 186;
        aal2                          = 187;
        radioMAC                      = 188;
        atmRadio                      = 189;
        imt                           = 190;
        mvl                           = 191;
        reachDSL                      = 192;
        frDlciEndPt                   = 193;
        atmVciEndPt                   = 194;
        opticalChannel                = 195;
        opticalTransport              = 196;
        propAtm                       = 197;
        voiceOverCable                = 198;
        infiniband                    = 199;
        teLink                        = 200;
        q2931                         = 201;
        virtualTg                     = 202;
        sipTg                         = 203;
        sipSig                        = 204;
        docsCableUpstreamChannel      = 205;
        econet                        = 206;
        pon155                        = 207;
        pon622                        = 208;
        bridge                        = 209;
        linegroup                     = 210;
        voiceEMFGD                    = 211;
        voiceFGDEANA                  = 212;
        voiceDID                      = 213;
        mpegTransport                 = 214;
        sixToFour                     = 215;
        gtp                           = 216;
        pdnEtherLoop1                 = 217;
        pdnEtherLoop2                 = 218;
        opticalChannelGroup           = 219;
        homepna                       = 220;
        gfp                           = 221;
        ciscoISLvlan                  = 222;
        actelisMetaLOOP               = 223;
        fcipLink                      = 224;
        rpr                           = 225;
        qam                           = 226;
        lmp                           = 227;
        cblVectaStar                  = 228;
        docsCableMCmtsDownstream      = 229;
        adsl2                         = 230;
        macSecControlledIF            = 231;
        macSecUncontrolledIF          = 232;
        aviciOpticalEther             = 233;
        atmbond                       = 234;
        voiceFGDOS                    = 235;
        mocaVersion1                  = 236;
        ieee80216WMAN                 = 237;
        adsl2plus                     = 238;
        dvbRcsMacLayer                = 239;
        dvbTdm                        = 240;
        dvbRcsTdma                    = 241;
        x86Laps                       = 242;
        wwanPP                        = 243;
        wwanPP2                       = 244;
        voiceEBS                      = 245;
        ifPwType                      = 246;
        ilan                          = 247;
        pip                           = 248;
        aluELP                        = 249;
        gpon                          = 250;
        vdsl2                         = 251;
        capwapDot11Profile            = 252;
        capwapDot11Bss                = 253;
        capwapWtpVirtualRadio         = 254;
        bits                          = 255;
        docsCableUpstreamRfPort       = 256;
        cableDownstreamRfPort         = 257;
        vmwareVirtualNic              = 258;
        ieee802154                    = 259;
        otnOdu                        = 260;
        otnOtu                        = 261;
        ifVfiType                     = 262;
        g9981                         = 263;
        g9982                         = 264;
        g9983                         = 265;
        aluEpon                       = 266;
        aluEponOnu                    = 267;
        aluEponPhysicalUni            = 268;
        aluEponLogicalLink            = 269;
        aluGponOnu                    = 270;
        aluGponPhysicalUni            = 271;
        vmwareNicTeam                 = 272;
    }
    Type type = 7;

    enum Status {
        unset          = 0;
        up             = 1;
        down           = 2;
        testing        = 3;
        unknown        = 4;
        dorman         = 5;
        notPresent     = 6;
        lowerLayerDown = 7;
    }

    Status admin_status       = 8;  // the desired state of the port
    Status operational_status = 9;  // the current state of the port

    google.protobuf.Timestamp last_changed = 10;

    int64 speed   = 11;
    string duplex = 12;
    int64 mtu     = 13;

    message Statistics {
        message Metrics {
            int64 packets    = 1;
            int64 bits       = 2;
            int64 unicast    = 3;
            int64 broadcast  = 4;
            int64 multicast  = 5;
            int64 pauses     = 6;
            int64 errors     = 7;
            int64 crc_errors = 8;
        }

        Metrics input  = 1;
        Metrics output = 2;

        int64 resets = 3;
    }

    Statistics stats = 14;

    Transceiver transceiver = 15;

    Neighbor neighbor = 16;

    repeated MACEntry mac_address_table = 17;
    repeated DHCPEntry dhcp_table       = 18;
    string config                       = 19;  // text blob of current config

    traffic_policy.ConfiguredTrafficPolicy configuredTrafficPolicy = 20;
    traffic_policy.QOS qos                                         = 21;
}

message Neighbor {
    string connected_port_type     = 1;
    string remote_port             = 2;
    string remote_hostname         = 3;
    string remote_mgmt_ip_address  = 4;
    string remote_port_description = 5;
    string chassis_id              = 6;
    string pvid                    = 7;
    bool lagg                      = 8;
    string timestamp               = 9;
}

message Aggregation {
    int64 priority   = 1;
    string mode      = 2;
    string type      = 3;
    string oper_key  = 4;
    string status    = 5;
    string timestamp = 6;

    repeated Port ports = 7;
}

message Transceivers {
    repeated Transceiver transceivers = 1;
}

message Transceiver {
    int64 physical_port_index = 1;
    string connector_type     = 2;
    bool ddm                  = 3;
    string vendor             = 4;
    string type               = 5;
    string transfer_distance  = 6;
    string wavelength         = 7;
    string serial_number      = 8;
    string part_number        = 9;
    string manufacturing_date = 10;

    message Statistics {
        double current   = 1;  // should be returned in mA
        double rx        = 2;  // should be returned in dBm
        double tx        = 3;  // should be returned in dBm
        double temp      = 4;  // in celsius
        double voltage   = 5;  // should be returned in V
        string timestamp = 6;
    }

    Statistics stats = 11;
}

message MACEntry {
    string hardware_address = 1;
    int64 vlan              = 2;
    string vendor           = 3;
    string timestamp        = 4;
}

message DHCPEntry {
    string ip_address       = 1;
    string hardware_address = 2;
    string vendor           = 3;
    int64 vlan              = 4;
    string timestamp        = 5;
}

message PhysicalPortInformation {
    string name  = 1;
    string oid   = 2;
    string value = 3;
}
